--- a/airflow/docker-compose.yaml
+++ b/airflow/docker-compose.yaml
@@ -6,6 +6,7 @@ x-airflow-common: &airflow-common
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${AIRFLOW_DB_USER}:${AIRFLOW_DB_PASS}@${AIRFLOW_DB_HOST}:${AIRFLOW_DB_PORT}/${AIRFLOW_DB_NAME}
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: "false"
     AIRFLOW__CORE__DEFAULT_TIMEZONE: ${TZ}
+    DB_URL: ${DB_URL}
   volumes:
     - airflow_local_site:/home/airflow/.local
     - ./dags:/opt/airflow/dags
